<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Deck Around</string> 
  <string name="host_game">Host Game</string>
  <string name="join_game">Join Game</string>
  <string name="enter_name">Enter Name</string>
  <string name="waiting">Waiting for players...</string>
  <string name="submit">Submit</string>
  <string name="start">Start Game</string>
  <string name="name">Name</string>
  <string name="password">Password</string>
</resources>
