<xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >
  
  <TextView
    android:id="@+id/title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="center_horizontal"
    android:text="@string/host_game" />
  
  <EditText
    android:id="@+id/name_entry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="center_horizontal"
    android:text="@string/name" />

<EditText
    android:id="@+id/password_entry"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="center_horizontal"
    android:text="@string/password" />

</LinearLayout>
