<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center_horizontal"
		android:textSize="70sp"
		android:text="@string/app_name" />

	<Button
		android:id="@+id/host_btn"
		style="@android:style/Widget.Holo.Button.Borderless"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/host_game"
		android:textSize="40sp"
		android:layout_marginTop="40dp" />

	<Button
		android:id="@+id/join_btn"
		style="@android:style/Widget.Holo.Button.Borderless"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/join_game"
		android:textSize="40sp" />
</LinearLayout>
